--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <option value="fahrenheit">Farenhite</option>
             </select> <br> <br>
             <label for="">OUTPUT</label><br>
-            <input type="text" class="space" id="display_ouput"> <br>
+            <input type="text" class="space" id="display_ouput" readonly> <br>
             <button class="space btn" onclick="convert1()">Convert</button>
         </form>
 
